Revision history for Perl extension Metabrik.

1.11
   - FEATURE: Metabrik: brik_author Command
   - FEATURE: Metabrik: optional_modules and optional_binaries Properties.
              Also added brik_has_binary and brik_has_module Commands.
   - new: core::context: get_used Command to return a reference to a used Brik
   - new: Metabrik: brik_author Command
   - bugfix: shell::script: allow blank lines and comments
   - bugfix: Metabrik: return error and not info on bad usage for some brik_has_* Commands

1.10 Tue Oct 27 20:13:36 CET 2015
   - FEATURE: core::context: allows to pass complex structs arguments to run and set Commands
     Example: run network::arp scan $info->{subnet}
   - FEATURE: core::context: allows also to execute Perl code within an Argument of a 
     run Command
     Example: run client::dns ptr_lookup "[ map { @$_ } values %$RUN ]"
   - FEATURE: core::shell: allows to complete aliases (can be disabled via
     aliases_completion Attribute
   - FEATURE: shell::command: use_sudo Attribute to launch sudo on executing external command
   - FEATURE: shell::command: file globbing enabled with capture Command
   - UPDATE: moved attributes_default() from brik_use_properties to brik_properties when 
     there is no need to use $self. It allows instanciated Attributes inheritage to work.
   - UPDATE: shell::command: do not print STDERR when using capture Command when there is no 
     STDERR string captured.
   - new: shell::command: execute Command to use capture_mode Attribute to launch either 
     capture or system Command
   - bugfix: core::context: save_state to use Metabrik brik_attributes Command to correctly 
     retrieve all Brik Attributes even those inherited
   - bugfix: core::shell: display error on chdir() failure
   - bugfix: core::shell: escapes " character when executing a multiline Perl/Metabrik Code
             example:
             my $test = 'root'
             for (0..1) {