@@ -37,10 +37,20 @@ sub brik_author {
    return $author || 'GomoR <GomoR[at]metabrik.org>';
 }
 
+sub brik_license {
+   my $self = shift;
+
+   my $license = $self->brik_properties->{license};
+
+   # Default to BSD 3-Clause
+   return $license || 'http://opensource.org/licenses/BSD-3-Clause';
+}
+
 sub brik_properties {
    return {
       revision => '$Revision$',
       author => 'GomoR <GomoR[at]metabrik.org>',
+      license => 'http://opensource.org/licenses/BSD-3-Clause',
       tags => [ qw() ],
       attributes => {
          debug => [ qw(0|1) ],
@@ -57,6 +67,7 @@ sub brik_properties {
       commands => {
          brik_version => [ ],
          brik_author => [ ],
+         brik_license => [ ],
          brik_help_set => [ qw(Attribute) ],
          brik_help_run => [ qw(Command) ],
          brik_class => [ ],
@@ -291,6 +302,7 @@ sub brik_check_properties {
    my %valid_keys = (
       revision => 1,
       author => 1,
+      license => 1,
       tags => 1,
       attributes => 1,
       attributes_default => 1,
@@ -310,7 +322,7 @@ sub brik_check_properties {
          print("[-] brik_check_properties: brik_properties with key [$key] is not an ARRAYREF\n");
          $error++;
       }
-      elsif ($key ne 'revision' && $key ne 'author' && $key ne 'tags' && ref($properties->{$key}) ne 'HASH') {
+      elsif ($key ne 'revision' && $key ne 'author' && $key ne 'license' && $key ne 'tags' && ref($properties->{$key}) ne 'HASH') {
          print("[-] brik_check_properties: brik_properties with key [$key] is not a HASHREF\n");
          $error++;
       }
@@ -324,7 +336,7 @@ sub brik_check_properties {
          print("[-] brik_check_properties: brik_use_properties with key [$key] is not an ARRAYREF\n");
          $error++;
       }
-      elsif ($key ne 'revision' && $key ne 'author' && $key ne 'tags' && ref($use_properties->{$key}) ne 'HASH') {
+      elsif ($key ne 'revision' && $key ne 'author' && $key ne 'license' && $key ne 'tags' && ref($use_properties->{$key}) ne 'HASH') {
          print("[-] brik_check_properties: brik_use_properties with key [$key] is not a HASHREF\n");
          $error++;
       }
@@ -332,7 +344,7 @@ sub brik_check_properties {
 
    # Check HASHREFs contains pointers to ARRAYREFs
    for my $key (keys %$properties) {
-      next if ($key eq 'revision' || $key eq 'author' || $key eq 'tags' || $key eq 'attributes_default');
+      next if ($key eq 'revision' || $key eq 'author' || $key eq 'license' || $key eq 'tags' || $key eq 'attributes_default');
 
       for my $subkey (keys %{$properties->{$key}}) {
          if (ref($properties->{$key}->{$subkey}) ne 'ARRAY') {
@@ -342,7 +354,7 @@ sub brik_check_properties {
       }
    }
    for my $key (keys %$use_properties) {
-      next if ($key eq 'revision' || $key eq 'author' || $key eq 'tags' || $key eq 'attributes_default');
+      next if ($key eq 'revision' || $key eq 'author' || $key eq 'license' || $key eq 'tags' || $key eq 'attributes_default');
 
       for my $subkey (keys %{$use_properties->{$key}}) {
          if (ref($use_properties->{$key}->{$subkey}) ne 'ARRAY') {
@@ -387,6 +399,7 @@ sub brik_check_use_properties {
    my %valid_keys = (
       revision => 1,
       author => 1,
+      license => 1,
       tags => 1,
       attributes => 1,
       attributes_default => 1,
@@ -406,7 +419,7 @@ sub brik_check_use_properties {
          print("[-] brik_check_use_properties: brik_use_properties with key [$key] is not an ARRAYREF\n");
          $error++;
       }
-      elsif ($key ne 'revision' && $key ne 'author' && $key ne 'tags' && ref($use_properties->{$key}) ne 'HASH') {
+      elsif ($key ne 'revision' && $key ne 'author' && $key ne 'license' && $key ne 'tags' && ref($use_properties->{$key}) ne 'HASH') {
          print("[-] brik_check_use_properties: brik_use_properties with key [$key] is not a HASHREF\n");
          $error++;
       }
@@ -414,7 +427,7 @@ sub brik_check_use_properties {
 
    # Check HASHREFs contains pointers to ARRAYREFs
    for my $key (keys %$use_properties) {
-      next if ($key eq 'revision' || $key ne 'author' || $key eq 'tags' || $key eq 'attributes_default');
+      next if ($key eq 'revision' || $key ne 'author' && $key ne 'license' || $key eq 'tags' || $key eq 'attributes_default');
 
       for my $subkey (keys %{$use_properties->{$key}}) {
          if (ref($use_properties->{$key}->{$subkey}) ne 'ARRAY') {
@@ -774,7 +787,12 @@ sub brik_tags {
 
    my $tags = $self->brik_properties->{tags};
 
-   return [ sort { $a cmp $b } @$tags ];
+   my $brik_name = $self->brik_name;
+   my @auto_tags = split(/::/, $brik_name);
+
+   my %uniq = map { $_ => 1 } (@auto_tags, @$tags);
+
+   return [ sort { $a cmp $b } keys %uniq ];
 }
 
 sub brik_has_tag {
